2011-04-13  Oliver Hunt  <oliver@apple.com>

        Fix 32bit tests.

        * runtime/StructureTransitionTable.h:
        (JSC::StructureTransitionTable::singleTransition):

2011-04-13  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        GC allocate Structure
        https://bugs.webkit.org/show_bug.cgi?id=58483

        Turn Structure into a GC allocated object.  Most of this patch
        is the mechanical change of replacing variations on RefPtr<Structure>
        with either Structure* (for arguments and locals), WriteBarrier<Structure>
        for the few cases where Structures are held by GC allocated objects
        and Strong<Structure> for the root structure objects in GlobalData.

        * API/JSCallbackConstructor.cpp:
        (JSC::JSCallbackConstructor::JSCallbackConstructor):
        * API/JSCallbackConstructor.h:
        (JSC::JSCallbackConstructor::createStructure):
        * API/JSCallbackFunction.h:
        (JSC::JSCallbackFunction::createStructure):
        * API/JSCallbackObject.h:
        (JSC::JSCallbackObject::createStructure):
        * API/JSCallbackObjectFunctions.h:
        (JSC::::JSCallbackObject):
        * API/JSContextRef.cpp:
        * JavaScriptCore.JSVALUE32_64only.exp:
        * JavaScriptCore.JSVALUE64only.exp:
        * JavaScriptCore.exp:
        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::~CodeBlock):
        (JSC::CodeBlock::markStructures):
        (JSC::CodeBlock::markAggregate):
        * bytecode/CodeBlock.h:
        (JSC::MethodCallLinkInfo::setSeen):
        (JSC::GlobalResolveInfo::GlobalResolveInfo):
        * bytecode/Instruction.h:
        (JSC::PolymorphicAccessStructureList::PolymorphicStubInfo::set):
        (JSC::PolymorphicAccessStructureList::PolymorphicAccessStructureList):
        (JSC::PolymorphicAccessStructureList::markAggregate):
        (JSC::Instruction::Instruction):
        * bytecode/StructureStubInfo.cpp:
        (JSC::StructureStubInfo::deref):